Add major refactor and ability to select course from right panel

--- a/public/info.html
+++ b/public/info.html
@@ -172,7 +172,16 @@
 </head>
 
 <body>
-    
+    <div onClick="handleOnClick(event)">
+	
+	</div>
+	
+	<script>
+		function handleOnClick(event){
+			event.preventDefault();
+			onLinkClick(event.target.innerText);
+		}
+	</script>
 </body>
 
 </html>
