Add minor clean up and bug fixes

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Course Link</title>
+    <title>Course Links</title>
   </head>
   <body>
     <noscript>
