Add title to infopanel.html

--- a/public/infopanel.html
+++ b/public/infopanel.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+    <title>Course Info</title>
     <style>
         #content #content-main h1.subject-and-number {
             color: #002754;
